@@ -24,12 +24,63 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/test/java')
+		}
+	}
 }
+
+configurations {
+	integrationTestCompile.extendsFrom testCompile
+	integrationTestRuntime.extendsFrom testRuntime
+	integrationTestImplementation.extendsFrom testImplementation
+}
+
+tasks.register('integrationTest', Test) {
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
+
+	description = 'Runs integration tests.'
+	group = 'verification'
+	useJUnitPlatform()
+	filter {
+		include '**/*IntegrationTest.*'
+	}
+}
+tasks.register('allTest', Test) {
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
+
+	description = 'Runs all tests.'
+	group = 'verification'
+	useJUnitPlatform()
+	filter {
+		include '**/*Test.*'
+	}
+}
+
+tasks.named('test') {
+	filter {
+		exclude '**/*IntegrationTest.*'
+	}
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
+	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
